# backend/gateway_service/docs/swagger.json
@@ -1159,6 +1159,12 @@
                     }
                 ],
                 "responses": {
+                    "200": {
+                        "description": "Данные сохранены",
+                        "schema": {
+                            "$ref": "#/definitions/schemas.SuccessResponse"
+                        }
+                    },
                     "400": {
                         "description": "Ошибка валидации контактов",
                         "schema": {
